<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Miss Bras</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Miss Bras</string>
    <string name="massaging">Massaging</string>
    <string name="passometer">Passometer</string>
    <string name="healthy_reminder">Healthy Reminder</string>
	<string name="music_spa">Music Spa</string>
	<string name="me">Me</string>
	<string name="settings">Setting</string>
	<string name="rub">Rub</string>
	<string name="press">Press</string>
	<string name="pinch">Pinch</string>
	<string name="pel">Pel</string>
	<string name="pat">Pat</string>
	<string name="auto">Auto</string>
	<string name="left_bra">Left</string>
	<string name="right_bra">Right</string>
	<string name="both_bra">Left&amp;Right</string>
	<string name="time_setting">Time</string>
	<string name="strength_setting">Strength</string>
	<string name="step"> Steps</string>
	<string name="target">Target</string>
	<string name="calorie">Calorie</string>
	<string name="kilometer">KM</string>
	<string name="max_steps">Maximun Steps: </string>
	<string name="total_steps">Total Steps(Today): </string>
	<string name="no_data">No more data for today.</string>
	<string name="add_new_reminder">Add new Reminder</string>
	<string name="friendly_reminder">Friendly Reminder</string>
	<string name="delete_all_reminder">Delete all Reminder?</string>
	<string name="delete_this_reminder">Delete this Reminder?</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="reminder_settings">Reminder Settings</string>
	<string name="oneshot">OneShot</string>
	<string name="everyday">Everyday</string>
	<string name="weekday">Weekday</string>
	<string name="customize">Customize</string>
	<string name="day_of_week">Day: </string>
	<string name="Monday">Mon.</string>
	<string name="Tuesday">Tues.</string>
	<string name="Wednesday">Wed.</string>
	<string name="Thursday">Thur.</string>
	<string name="Friday">Fri.</string>
	<string name="Saturday">Sat.</string>
	<string name="Sunday">Sun.</string>
	<string name="save">Save</string>
	<string name="hour"> h</string>
	<string name="minute"> m</string>
	<string name="healthy_rhythm">Healthy Rhythm</string>
	<string name="local_music">Local Music</string>
	<string name="play_default_music">Play default music</string>
	<string name="songs">song(s)</string>
	<string name="age">Age</string>
	<string name="height">Height</string>
	<string name="weight">Weight</string>
	<string name="step_length">Step Length</string>
	<string name="target_steps">Target</string>
	<string name="picture_selection">Picture Selection</string>
	<string name="select_from_local">Select from Local</string>
	<string name="take_photo">Take a Photo</string>
	<string name="user_name">User Name</string>
	<string name="input_user_name">Input your user name</string>
	<string name="age_selection">Age Selection</string>
	<string name="height_selection">Height Selection</string>
	<string name="weight_selection">Weight Selection</string>
	<string name="step_length_selection">Step Length Selection</string>
	<string name="target_selection">Target Selection</string>
	<string name="binding_my_massager">Binding my Massager</string>
	<string name="device_update">Device Update</string>
	<string name="broadcast_center">Broadcast Center</string>
	<string name="feedback">Feedback</string>
	<string name="new_version">New Version</string>
	<string name="online_shop">Online Shop</string>
    <string name="setting_language">Language</string>
    <string name="unbound">Unbound</string>
    <string name="bound">Bound</string>
    <string name="search_ble">Search for Bluetooth</string>
    <string name="binding_left_bra">Binding Left Bra</string>
    <string name="binding_right_bra">Binding Right Bra</string>
    <string name="searching">Searching...</string>
    <string name="binding_finished">Binding Finished</string>
    <string name="searched_devices">Searched Devices: </string>
    <string name="device_not_nearby">No Devices Nearby</string>
    <string name="connect_successfully">Connect Successfully</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_devices_connected">No Device Connected</string>
    <string name="unbind">Do you want to unbind?</string>
	<string name="one_more_click_exit">One More Click Exit</string>
	<string name="follow_system">Auto</string>
	<string name="time_up">Time Up</string>
	<string name="contact">Contact</string>
	<string name="your_contact">Your Contact</string>
	<string name="feedback_content">Feedback</string>
	<string name="send_feedback">Send</string>
	<string name="contact_can_not_be_null">Contact can not be null</string>
	<string name="feedback_can_not_be_null">Feedback can not be null</string>
	<string name="sent">Sent</string>
	<string name="current_version_is_the_latest">Current version is the latest</string>
	<string name="device_version_is_the_latest">Device is the latest</string>
	<string name="no_message">No Message</string>
	</resources>
