<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/friendly_reminder"
        android:textColor="#55DFC0"
        android:textSize="18sp"
        android:background="#eeeeee"/>
    
    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/delete_all_reminder"
        android:textSize="15sp"
        android:textColor="#aaaaaa"/>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="#55DFC0"
            android:gravity="center"
            android:background="@drawable/selector_btn_grey_to_dark"/>
        
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:background="@drawable/selector_btn_cyan_to_light"/>
        
    </LinearLayout>

</LinearLayout>
