<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEFFF2" >
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#55DFC0">
        
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/arrow_left"
            android:background="@drawable/selector_btn_cyan_to_dark"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reminder_settings"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
        
    </RelativeLayout>
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#F3F5DF">
        
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_centerInParent="true"
	        android:background="#E3F3DC"/>
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    	    
		    <net.simonvt.numberpicker.NumberPicker
		        android:id="@+id/number_picker_hour"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
		    
		    <View
		        android:layout_width="1dp"
		        android:layout_height="match_parent"
		        android:background="#eeeeee"/>
		    
		    <net.simonvt.numberpicker.NumberPicker
		        android:id="@+id/number_picker_minute"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"/>
		    
		</LinearLayout>
	</RelativeLayout>

	
	<RadioGroup
	    android:id="@+id/radio_group"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp"	    
	    android:background="#ffffff"
	    android:orientation="vertical">
		
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="30dp"
	    	android:layout_marginRight="30dp"
	        android:background="#eeeeee"/>
		
	    <RadioButton
		    android:id="@+id/radio_btn_0"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:paddingLeft="30dp"
		    android:paddingRight="40dp"		    
		    android:button="@null"
		    android:drawableRight="@drawable/selector_checked"
		    android:background="@drawable/selector_btn_white_to_grey"
		    android:text="@string/oneshot"
		    android:textColor="#969696"
		    android:textSize="16sp" />
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="30dp"
	    	android:layout_marginRight="30dp"
	        android:background="#eeeeee"/>

		<RadioButton
		    android:id="@+id/radio_btn_1"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:paddingLeft="30dp"
		    android:paddingRight="40dp"		    
		    android:button="@null"
		    android:drawableRight="@drawable/selector_checked"
		    android:background="@drawable/selector_btn_white_to_grey"
		    android:text="@string/everyday"
		    android:textColor="#969696"
		    android:textSize="16sp" />
		
		<View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="30dp"
	    	android:layout_marginRight="30dp"
	        android:background="#eeeeee"/>
		
		<RadioButton
		    android:id="@+id/radio_btn_2"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:paddingLeft="30dp"
		    android:paddingRight="40dp"
		    android:button="@null"
		    android:drawableRight="@drawable/selector_checked"
		    android:background="@drawable/selector_btn_white_to_grey"
		    android:text="@string/weekday"
		    android:textColor="#969696"
		    android:textSize="16sp" />
		
		<View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="30dp"
	    	android:layout_marginRight="30dp"
	        android:background="#eeeeee"/>
		
		<RadioButton
		    android:id="@+id/radio_btn_3"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:paddingLeft="30dp"
		    android:paddingRight="40dp"
		    android:button="@null"
		    android:drawableRight="@drawable/selector_checked"
		    android:background="@drawable/selector_btn_white_to_grey"
		    android:text="@string/customize"
		    android:textColor="#969696"
		    android:textSize="16sp" />
		
		<View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_marginLeft="30dp"
	    	android:layout_marginRight="30dp"
	        android:background="#eeeeee"/>

	</RadioGroup>
	
	<LinearLayout 
	    android:id="@+id/cb_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:gravity="center_vertical"
	    android:orientation="horizontal"
	    android:visibility="invisible">
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/day_of_week"
	        android:textSize="14sp"
	        android:textColor="#969696"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb1"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Monday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb2"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Tuesday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb3"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Wednesday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb4"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Thursday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb5"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Friday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb6"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Saturday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>
	    
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="1"/>
	    
	    <CheckBox
	        android:id="@+id/cb7"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:button="@null"
	        android:gravity="center"
	        android:text="@string/Sunday"
	        android:textSize="14sp"
	        android:textColor="@drawable/selector_text_black_to_white"
	        android:background="@drawable/selector_day_of_week_cb_bg"/>

	</LinearLayout>
	
	<View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
	
	<Button 
        android:id="@+id/btn_ensure"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/save"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:background="@drawable/selector_btn_cyan_to_light"/>
    
	<View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
	
</LinearLayout>
