<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEFFF2" >
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#55DFC0">
        
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/arrow_left"
            android:background="@drawable/selector_btn_cyan_to_dark"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
        
    </RelativeLayout>
    
	<View
	    android:layout_width="1dp"
	    android:layout_height="0dp"
	    android:layout_weight="0.5"/>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:orientation="horizontal">
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="20dp"
	        android:text="@string/contact"
	        android:textSize="16sp"
	        android:textColor="#4D4D4D"/>
	    
	    <EditText 
	        android:id="@+id/et_contact"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:padding="5dp"
	        android:textSize="16sp"
	        android:textColor="#4D4D4D"
	        android:hint="@string/your_contact"
	        android:background="@drawable/shape_stroke_grey"/>
	    
	</LinearLayout>
	
	<View
	    android:layout_width="1dp"
	    android:layout_height="0dp"
	    android:layout_weight="0.5"/>
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/feedback_content"
        android:textSize="16sp"
        android:textColor="#4D4D4D"/>
	
	<EditText 
	    android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="left"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:padding="5dp"
        android:textSize="16sp"
        android:textColor="#4D4D4D"
        android:background="@drawable/shape_stroke_grey"/>
	
	<View
	    android:layout_width="1dp"
	    android:layout_height="0dp"
	    android:layout_weight="1"/>
	
	<Button 
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/send_feedback"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:background="@drawable/selector_btn_cyan_to_light"/>
	
	<View
	    android:layout_width="1dp"
	    android:layout_height="0dp"
	    android:layout_weight="2"/>
	    
	    
</LinearLayout>
