<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="#55DFC0"
        android:textSize="18sp"
        android:background="#eeeeee"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/shape_stroke_grey"
        android:orientation="horizontal">
        
        <EditText 
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:textColor="#696969"
            android:textSize="18sp"
            android:hint="@string/input_user_name"
            android:textColorHint="#eeeeee"
            android:background="#00000000"
            android:layout_weight="1"/>
        
        <ImageView
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/mine_remove"
            android:visibility="invisible"/>
        
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="#55DFC0"
            android:gravity="center"
            android:background="@drawable/selector_btn_grey_to_dark"/>
        
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:background="@drawable/selector_btn_cyan_to_light"/>
        
    </LinearLayout>

</LinearLayout>
