<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FEFFF2">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#55DFC0">
        
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/arrow_left"
            android:background="@drawable/selector_btn_cyan_to_dark"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/music_spa"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
        
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#eeeeee"/>
    
    <LinearLayout
        android:id="@+id/btn_healthy_music"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_btn_white_to_grey"
        android:orientation="horizontal">     
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/healthy_rhythm"
            android:textSize="16sp"
            android:textColor="#3d3d3d"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/play_default_music"
            android:textSize="12sp"
            android:textColor="#696969"/>
        
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        
        <ImageView 
	        android:id="@+id/iv_trumpet"
	        android:layout_width="18dp"
	        android:layout_height="18dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/music_trumpet"/>
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>
    
    <LinearLayout
        android:id="@+id/btn_local_music"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_btn_white_to_grey"
        android:orientation="horizontal">     
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/local_music"
            android:textSize="16sp"
            android:textColor="#3d3d3d"/>
        
        <TextView
            android:id="@+id/tv_numOfSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/songs"
            android:textSize="12sp"
            android:textColor="#696969"/>
        
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        
        <ImageView
            android:id="@+id/iv_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@drawable/arrow_right"/>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>
    
    <ListView
        android:id="@+id/lv_songs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="0dp"
        android:divider="#eeeeee"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:background="#ffffff"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/iv_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:src="@drawable/music_sound_normal"/>
        
        <SeekBar
            android:id="@+id/seekbar_sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"          
            android:thumb="@drawable/shape_seekbar_thumb"
            android:max="100"
            android:progressDrawable="@drawable/layer_seekbar"
            android:progress="0"                
           	android:minHeight="5dp"
           	android:maxHeight="5dp"
           	android:thumbOffset="0dp"/>
        
        <CheckBox
            android:id="@+id/btn_play_or_stop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="40dp"
            android:button="@null"
            android:background="@drawable/selector_play_or_stop"/>
    </LinearLayout>

</LinearLayout>
